[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/CameraController.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1024, 690 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 840, 500 )

[node name="Camera2D" type="Camera2D"]
pause_mode = 2
current = true
zoom = Vector2( 2, 2 )
script = ExtResource( 1 )

[node name="DespawnArea" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 8

[node name="DespawnShape" type="CollisionShape2D" parent="DespawnArea"]
shape = SubResource( 1 )

[node name="SpawnArea" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 8

[node name="SpawnShape" type="CollisionShape2D" parent="SpawnArea"]
shape = SubResource( 2 )
